# MAJ

./: .gitignore  launch.bat  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  manifest.rc  tauri.conf.json
src-tauri/src/: main.rs
